added text to the nav links

--- a/html/home.html
+++ b/html/home.html
@@ -12,10 +12,10 @@
 </header>
 <nav class="main-nav" role="navigation">
 	<ul>
-		<li class="contact"></li>
-		<li class="about"></li>
-		<li class="instagram"></li>
-		<li class="blog"></li>
+		<li class="contact">contact</li>
+		<li class="about">about</li>
+		<li class="instagram">instagram</li>
+		<li class="blog">blog</li>
 	</ul>
 </nav>
 <h1>About</h1>
