adds a style sheet

--- a/html/home.html
+++ b/html/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Pocono Digital House | Video Production</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <header class="main-head">
