--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,7 @@
 		<li class="blog">blog</li>
 	</ul>
 </nav>
-<h1>About</h1>
+<!--<h1>About</h1>-->
 
 <div class="innercontent"><h2>Settled in the heart of the Poconos, we work with international and Fortune 500 companies, but we’re most passionate about this community and its businesses. Let’s get to work and uncover the stories that will grow your brand.</h2>
 </div>
