More fun changes
added more css

--- a/html/about.html
+++ b/html/about.html
@@ -12,8 +12,14 @@
 </header>
 <nav class="main-nav" role="navigation">
 	<ul>
-		<li class="contact">contact</li>
-		<li class="about">about</li>
+		<li class="contact">
+			<a href=".../contact.html">contact
+			</a>
+		</li>
+		<li class="about">
+			<a href=".../about.html">about
+			</a>
+		</li>
 		<li class="instagram">instagram</li>
 		<li class="blog">blog</li>
 	</ul>
