added html pages and css updates

--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,9 @@
 			<a href=".../about.html">about
 			</a>
 		</li>
-		<li class="instagram">instagram</li>
+		<li class="instagram">
+			<a href="https://www.instagram.com/pocono_digital/" target="_blank">instagram</a>
+		</li>
 		<li class="blog">blog</li>
 	</ul>
 </nav>
