added html and css

--- a/html/about.html
+++ b/html/about.html
@@ -5,25 +5,27 @@
 <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+	<div class="aboutbg"></div>
 <header class="main-head">
-	<a class="logo" href="/" title="poconodigitalhouse">
+	<a class="logo" href="index.html" title="poconodigitalhouse">
 		<img alt="poconodigitalhouse" src="../img/pdhlogo.svg"/>
 	</a>
 </header>
 <nav class="main-nav" role="navigation">
 	<ul>
 		<li class="contact">
-			<a href=".../contact.html">contact
+			<a href="contact.html">contact
 			</a>
 		</li>
 		<li class="about">
-			<a href=".../about.html">about
+			<a href="about.html">about
 			</a>
 		</li>
 		<li class="instagram">
 			<a href="https://www.instagram.com/pocono_digital/" target="_blank">instagram</a>
 		</li>
-		<li class="blog">blog</li>
+		<li class="blog">
+		<a href="https://www.instagram.com/pocono_digital/" target="_blank">blog</a>
 	</ul>
 </nav>
 <!--<h1>About</h1>-->
