--- a/html/index.html
+++ b/html/index.html
@@ -5,35 +5,44 @@
 <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+	<div class="videobg">
+	<iframe src="
+	https://player.vimeo.com/video/161213602
+	?
+	background=1
+	&
+	title=0
+	&
+	byline=0
+	&
+	portrait=0
+	" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
 <header class="main-head">
-	<a class="logo" href="/" title="poconodigitalhouse">
+	<a class="logo" href="index.html" title="poconodigitalhouse">
 		<img alt="poconodigitalhouse" src="../img/pdhlogo.svg"/>
 	</a>
 </header>
 <nav class="main-nav" role="navigation">
 	<ul>
 		<li class="contact">
-			<a href=".../contact.html">contact
+			<a href="contact.html">contact
 			</a>
 		</li>
 		<li class="about">
-			<a href=".../about.html">about
+			<a href="about.html">about
 			</a>
 		</li>
 		<li class="instagram">
 			<a href="https://www.instagram.com/pocono_digital/" target="_blank">instagram</a>
 		</li>
-		<li class="blog">blog</li>
+		<li class="blog">
+		<a href="https://www.instagram.com/pocono_digital/" target="_blank">blog</a>
 	</ul>
 </nav>
 
-<div class="innercontent">
-	<div class="videowrap"
-	<iframe src="https://player.vimeo.com/video/158170516?title=0&amp;byline=0&amp;color=ffffff&amp;autoplay=1&amp;loop=1" width="640" height="360" frameborder="0" title="ILD_070216_PRORES" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" data-ready="true"></iframe>
-      </div>
-</div>
 
 
-
+<script src="https://player.vimeo.com/api/player.js" type="text/javascript" />
 </body>
 </html>
