more code updates

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,9 +4,8 @@
 <title>Pocono Digital House | Video Production</title>
 <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-	<div class="bgcolor"></div>
-<header class="main-head">
+<body style="background-color:#133B60;">
+	<header class="main-head">
 	<a class="logo" href="index.html" title="poconodigitalhouse">
 		<img alt="poconodigitalhouse" src="../img/pdhlogo.svg"/>
 	</a>
