--- a/html/about.html
+++ b/html/about.html
@@ -18,8 +18,9 @@
 			</a>
 		</li>
 		<li class="about">
-			<a href="about.html">about
+			<a href="about.html">about 
 			</a>
+			<div class="current"></div>
 		</li>
 		<li class="instagram">
 			<a href="https://www.instagram.com/pocono_digital/" target="_blank">instagram</a>
@@ -33,6 +34,7 @@
 <div class="innercontent"><h2>Settled in the heart of the Poconos, we work with international and Fortune 500 companies, but we’re most passionate about this community and its businesses. Let’s get to work and uncover the stories that will grow your brand.</h2>
 </div>
 
+<div class="morecontent">
 <div class="body1">
 	<h3>Strategic Narratives</h3>
 	<p>You need to put your story—and your money—where it matters most. That’s why PDH fully integrates strategic offerings to show you why and how to leverage the right platforms and content for your target audience.</p>
@@ -50,14 +52,9 @@
 
 <div class="body1">
 	<h3>My Clients</h3>
-	<ul>
-		<li><img src="clientlogo1.jpg"/></li>
-		<li><img src="clientlogo2.jpg"/></li>
-		<li><img src="clientlogo3.jpg"/></li>
-		<li><img src="clientlogo4.jpg"/></li>
-	</ul>
+	<p>SAP, US Army, Xenith, Adidas, Techo-Bloc, CertainTeed, Arabella, Esurance, GMR Marketing, Stoner Bunting Advertising, VICE, NatGeo, Faviana, Yamaha, Bloomsburg, University, Villanova University, POP, Calyx, Yesler, MLB, NUNA, Temple University, Ameri-Source Bergen, UPenn, Comcast, ADP</p>
 </div>
-
+</div>
 
 
 </body>
