--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
 <title>Pocono Digital House | Video Production</title>
 <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="background-color:#133B60;">
+<body style="background-color:#F9F9E2;">
 	<header class="main-head">
 	<a class="logo" href="index.html" title="poconodigitalhouse">
 		<img alt="poconodigitalhouse" src="../img/pdhlogo.svg"/>
@@ -29,11 +29,13 @@
 </nav>
 <!--<h1>About</h1>-->
 
-<div class="innercontent"><h2>Your brand has a compelling story to tell. A story that will move people. Bring them together. Create a moment shareable authenticity that builds excitement. <br>
+<div class="innercontentcontact"><h2>Your brand has a compelling story to tell. A story that will move people. Bring them together. Create a moment shareable authenticity that builds excitement. <br>
 <br>
 There is a best way to tell your story—from concept, to production, to post. And that’s with a team that can uncover the igniting truths behind your brand. It’s not just video, and it’s not a transactional formula. It’s the way we work at Pocono Digital House—by growing a partnership. <br>
 <br>
-Ready to get started? <a href="mailto:fred@poconodigitalhouse.com">Let’s talk</a> 
+Ready to get started? Let’s talk
+<br>
+<a href="mailto:fred@poconodigitalhouse.com">fred@poconodigitalhouse.com</a>
 </h2>
 </div>
 
