--- a/about.html
+++ b/about.html
@@ -1,39 +1,65 @@
 ---
 layout: default
 title: About
-bg_image: fullscreenBg.png
 ---
 
-<div class="innercontent">
-  <h2>
-    Settled in the heart of the Poconos, we work with international and Fortune 500 companies, but we’re most passionate about this community and its businesses. Let’s get to work and uncover the stories that will grow your brand.
-  </h2>
-</div>
-
-<div class="morecontent">
-  <div class="body1">
-    <h3>Strategic Narratives</h3>
-    <p>
-      You need to put your story—and your money—where it matters most. That’s why PDH fully integrates strategic offerings to show you why and how to leverage the right platforms and content for your target audience.
-    </p>
+<div class="about">
+  <div class="about__hero">
+    <div class="about__hero-image">
+      <span />
+    </div>
+    <div class="about__hero-text">
+      {% include trees.html class="about-hero" count=1 %}
+      <h2>
+        From the heart of the Poconos, we work with international and Fortune 500 companies. But we’re most passionate about our community and its businesses.
+      </h2>
+    </div>
   </div>
 
-  <div class="body1">
-    <h3>Industry Expertise</h3>
-    <p>
-      Quality work rests on a solid foundation of craftsmanship plus top-of-the-line tools. We’ve been producing engaging videos with the highest quality images available for over 15 years because we have the skills and dedication necessary.
-    </p>
+  <div class="about__body">
+    <div class="about__body-primary">
+
+      {% include trees.html class="about-body" count=3 %}
+
+      <div class="about__body-group">
+        <h3>Strategic Narratives</h3>
+        <p>
+          You need to put your story—and your money—where it matters most. That’s why PDH fully integrates strategic offerings to show you why and how to leverage the right platforms and content for your target audience.
+        </p>
+      </div>
+
+      <div class="about__body-group">
+        <h3>Industry Expertise</h3>
+        <p>
+          Quality work rests on a solid foundation of craftsmanship and top-of-the-line tools. We’ve been producing videos with the highest quality images available for over 15 years because we have the skills and dedication necessary.
+        </p>
+      </div>
+
+      <div class="about__body-group">
+        <h3>Scalable</h3>
+        <p>
+          Your content’s life-cycle and longevity is our top priority. Each frame is shot with flexibility in mind, so you can tell your story multiple ways for multiple platforms—without going back to square one.
+        </p>
+      </div>
+    </div>
+
+    <div class="about__body-secondary">
+      <div class="about__body-group">
+        <h3>Clients</h3>
+        <p>
+          SAP, US Army, Xenith, Adidas, Techo-Bloc, CertainTeed, Arabella, Esurance, GMR Marketing, Stoner Bunting Advertising, VICE, NatGeo, Faviana, Yamaha, Bloomsburg, University, Villanova University, POP, Calyx, Yesler, MLB, NUNA, Temple University, Ameri-Source Bergen, UPenn, Comcast, ADP
+        </p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="about__footer">
+    <img
+      srcset="{{ '/assets/img/sundance-slider-me.jpg' | relative_url }} 1x,
+              {{ '/assets/img/sundance-slider-me@2x.jpg' | relative_url }} 2x,
+              {{ '/assets/img/sundance-slider-me@3x.jpg' | relative_url }} 3x"
+      sizes="100vw"
+    />
   </div>
 
-  <div class="body1">
-    <h3>Scalable</h3>
-    <p>
-      Your content’s life-cycle and longevity is our top priority. Each frame is shot with flexibility in mind, so you can tell your story multiple ways for multiple platforms—without going back to square one.
-    </p>
-  </div>
-
-  <div class="body1">
-    <h3>My Clients</h3>
-    <p>SAP, US Army, Xenith, Adidas, Techo-Bloc, CertainTeed, Arabella, Esurance, GMR Marketing, Stoner Bunting Advertising, VICE, NatGeo, Faviana, Yamaha, Bloomsburg, University, Villanova University, POP, Calyx, Yesler, MLB, NUNA, Temple University, Ameri-Source Bergen, UPenn, Comcast, ADP</p>
-  </div>
 </div>
