--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ nav_theme: dark
     Your brand has a compelling story to tell. And there is a best way to tell it—with a partner who sees your vision through, from concept, to production, to post.
   </p>
   <p>
-    Ready to get started? Let’s talk <a href="info@poconodigitalhouse.com">info@poconodigitalhouse.com</a>
+    Ready to get started? Let’s talk <a href="mailto:info@poconodigitalhouse.com">info@poconodigitalhouse.com</a>
   </p>
   {% include trees.html class="contact-after" count=5 %}
 </div>
