--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ title: About
       <div class="about__body-group">
         <h3>Clients</h3>
         <p>
-          SAP, US Army, Xenith, Adidas, Techo-Bloc, CertainTeed, Arabella, Esurance, GMR Marketing, Stoner Bunting Advertising, VICE, NatGeo, Faviana, Yamaha, Bloomsburg, University, Villanova University, POP, Calyx, Yesler, MLB, NUNA, Temple University, Ameri-Source Bergen, UPenn, Comcast, ADP
+          SAP, US Army, Xenith, Techo-Bloc, CertainTeed, Arabella, Esurance, GMR Marketing, Stoner Bunting Advertising, GMR, VICE, NatGeo, Faviana, Pennsylvania Farmers Union, Yamaha, East Stroudsburg University, POP, Calyx, Yesler, Comcast, ADP
         </p>
       </div>
     </div>
